InternexDev_Sandbox/src/objects/LBI_and_PR__c.object
<CustomObject>
    <fields>
        <fullName>Lockbox_Image__c</fullName>
        <label>Lockbox Image</label>
        <referenceTo>Lockbox_Image__c</referenceTo>
        <relationshipLabel>LBI and PRS</relationshipLabel>
        <relationshipName>LBI_and_PRS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>akritiv__Payment__c</referenceTo>
        <relationshipLabel>LBI and PRS</relationshipLabel>
        <relationshipName>LBI_and_PRS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WF_PR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WF_PR</label>
        <referenceTo>WF_PR__c</referenceTo>
        <relationshipLabel>LBI and PRS</relationshipLabel>
        <relationshipName>LBI_and_PRS</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LBI and PR</label>
    <nameField>
        <displayFormat>LBIPR-{000000}</displayFormat>
        <label>LBI and PR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LBI and PRS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>